# milkman

./: .gitignore  README.md  milkman.cabal
cli/: Main.hs
src/Milkman/: Context.hs  Covers.hs  Factors.hs  IO.hs
src/Milkman/Context/: Context.hs
src/Milkman/Covers/: Conceptual.hs  Preconceptual.hs
src/Milkman/IO/: Burmeister.hs  Conexp.hs
test/: Test.hs
test/Milkman/: ContextTests.hs  CoversTests.hs
test/Milkman/Test/: Context.hs
