name:                milkman
version:             0.1.0.0
synopsis:            Boolean factor analysis
-- description:
homepage:            http://github.com/mmarx/milkman
license:             GPL-3
license-file:        LICENSE
author:              Maximilian Marx
maintainer:          mmarx@wh2.tu-dresden.de
copyright:           (c) 2014 Maximilian Marx
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Milkman.Context
                     , Milkman.IO
  other-modules:       Milkman.IO.Burmeister
                     , Milkman.IO.Conexp
  other-extensions:    BangPatterns
                     , OverloadedStrings
                     , TypeOperators
  build-depends:       base >=4.6 && <4.7
                     , attoparsec >= 0.11 && <0.12
                     , attoparsec-conduit >= 1.0 && <1.1
                     , conduit >= 1.0 && <1.1
                     , containers >= 0.5 && <0.6
                     , filesystem-conduit >= 1.0 && <1.1
                     , repa >= 3.2 && <3.3
                     , system-filepath >= 0.4 && <0.5
                     , text >= 1.1 && <1.2
                     , xml-conduit >= 1.1 && <1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -Wall