name:                milkman
version:             0.1.0.0
synopsis:            Boolean factor analysis
-- description:
homepage:            http://github.com/mmarx/milkman
license:             GPL-3
license-file:        LICENSE
author:              Maximilian Marx
maintainer:          mmarx@wh2.tu-dresden.de
copyright:           (c) 2014 Maximilian Marx
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Milkman.Context
                     , Milkman.Covers
                     , Milkman.Factors
                     , Milkman.IO
  other-modules:       Milkman.Context.Context
                     , Milkman.Covers.Conceptual
                     , Milkman.Covers.Preconceptual
                     , Milkman.IO.Burmeister
                     , Milkman.IO.Conexp
  other-extensions:    BangPatterns
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , TemplateHaskell
                     , TypeFamilies
                     , TypeOperators
  build-depends:       base >=4.6 && <4.7
                     , attoparsec == 0.11.*
                     , attoparsec-conduit == 1.0.*
                     , conduit == 1.0.*
                     , containers == 0.5.*
                     , filesystem-conduit == 1.0.*
                     , repa == 3.2.*
                     , split == 0.2.*
                     , system-filepath == 0.4.*
                     , text == 1.1.*
                     , vector == 0.10.*
                     , vector-th-unbox == 0.2.*
                     , xml-conduit == 1.1.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2
  ghc-prof-options:    -prof -auto-all -caf-all

executable milkman
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2 -rtsopts=all
  ghc-prof-options:    -prof -auto-all -caf-all -rtsopts=all
  hs-source-dirs:      cli
  main-is:             Main.hs
  build-depends:       base >= 4.6 && <4.7
                     , containers == 0.5.*
                     , filepath == 1.3.*
                     , milkman
                     , text == 1.1.*
