name:                milkman
version:             0.1.0.1
synopsis:            Boolean factor analysis
description:         Compute boolean factorizations of formal contexts
homepage:            http://github.com/mmarx/milkman
license:             GPL-3
license-file:        LICENSE
author:              Maximilian Marx
maintainer:          mmarx@wh2.tu-dresden.de
copyright:           (c) 2014 Maximilian Marx
category:            Math
build-type:          Simple
cabal-version:       >=1.10

Flag Static
  Description:       Build a statically-linked binary
  Default:           False

library
  exposed-modules:     Milkman.Context
                     , Milkman.Covers
                     , Milkman.Factors
                     , Milkman.IO
  other-modules:       Milkman.Context.Context
                     , Milkman.Covers.Conceptual
                     , Milkman.Covers.Preconceptual
                     , Milkman.IO.Burmeister
                     , Milkman.IO.Conexp
  other-extensions:    BangPatterns
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , TemplateHaskell
                     , TypeFamilies
                     , TypeOperators
  build-depends:       base >=4.6 && <4.7
                     , attoparsec == 0.12.*
                     , conduit == 1.2.*
                     , conduit-combinators == 0.2.*
                     , conduit-extra == 1.1.*
                     , containers == 0.5.*
                     , repa == 3.2.*
                     , resourcet == 1.1.*
                     , split == 0.2.*
                     , system-filepath == 0.4.*
                     , text == 1.1.*
                     , vector == 0.10.*
                     , vector-th-unbox == 0.2.*
                     , xml-conduit == 1.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2
  ghc-prof-options:    -prof -auto-all -caf-all

executable milkman
  default-language:    Haskell2010
  if flag(static)
    ghc-options:         -static -Wall -Werror -O2 -rtsopts=all
    ghc-prof-options:    -static -prof -auto-all -caf-all -rtsopts=all
    ld-options:          -static -pthread
  else
    ghc-options:         -Wall -Werror -O2 -rtsopts=all
    ghc-prof-options:    -prof -auto-all -caf-all -rtsopts=all
  hs-source-dirs:      cli
  main-is:             Main.hs
  build-depends:       base >= 4.6 && <4.7
                     , optparse-applicative == 0.9.*
                     , containers == 0.5.*
                     , filepath == 1.3.*
                     , milkman
                     , text == 1.1.*

test-suite test-milkman
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2 -rtsopts=all -threaded
                       -fno-warn-missing-signatures
                       -fno-warn-orphans
                       -fno-warn-unused-imports
  ghc-prof-options:    -prof -auto-all -caf-all -rtsopts=all
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  other-extensions:    OverloadedStrings
                     , TemplateHaskell
  build-depends:       base >= 4.6 && <4.7
                     , milkman
                     , split == 0.2.*
                     , tasty == 0.8.*
                     , tasty-ant-xml == 1.0.*
                     , tasty-golden == 2.2.*
                     , tasty-hunit == 0.8.*
                     , tasty-quickcheck == 0.8.*
                     , tasty-rerun == 1.1.*
                     , tasty-smallcheck == 0.8.*
                     , tasty-th == 0.1.*
                     , text == 1.1.*
                     , QuickCheck == 2.6.*
                     , quickcheck-instances == 0.3.*

source-repository head
  type:                git
  location:            https://github.com/mmarx/milkman.git
  branch:              master
